@@ -66,6 +66,17 @@ systems.</p>
       variables are specified.</td>
     <td align="center" valign="top">No, default is <i>false</i></td>
   </tr>
+  <tr>
+    <td valign="top">vmlauncher</td>
+    <td valign="top">Run command using the Java VM's execution facilities
+        where available. If set to false the underlying OS's shell,
+        either directly or through the antRun scripts, will be used.
+        Under some operating systems, this gives access to facilities
+        not nomrally available through the VM including, under Windows,
+        being able to execute scripts, rather than their associated
+        interpreter.</td>
+    <td align="center" valign="top">No, default is <i>true</i></td>
+  </tr>
 </table>
 <h3>Examples</h3>
 <blockquote>
